--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=197870b2ec37b8b5ff1c0530bea313d2
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://app:app@mysql:3306/app?serverVersion=8&charset=utf8
 ###< doctrine/doctrine-bundle ###
